<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/workAndbreak">

        <EditTextPreference
            app:key="workTime"
            app:title="@string/CycleWorkTime"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="25"
            />

        <EditTextPreference
            app:key="breakTime"
            app:title="@string/CycleBreakTime"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="5"
            />
        <EditTextPreference
            app:key="breakLastTime"
            app:title="@string/lastCycleTime"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="15"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/workCycles">

        <EditTextPreference
            app:key="numCycles"
            app:title="@string/numCyclesWork"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="4"
            />


    </PreferenceCategory>

</PreferenceScreen>